# fortuples

./: Cargo.toml  LICENSE  README.md  expand.rs
doc/: badges.md  header.md  style.html
doc/expand/: auto_impl.rs  auto_impl_debug_expand.rs  auto_impl_max_size.rs  auto_impl_min_size.rs  auto_impl_refs_tuple.rs  auto_impl_refs_tuple_mut.rs  auto_impl_syntax.rs  fortuples.rs  fortuples_debug_expand.rs  fortuples_max_size.rs  fortuples_min_size.rs  fortuples_refs_tuple.rs  fortuples_refs_tuple_mut.rs  member_name.rs  member_type.rs  tuple_name.rs
src/: expand.rs  lib.rs  parse.rs  types.rs
tests/: attr_preserve.rs  auto_impl_codegen.rs  codegen.rs  errors.rs  expand.rs  fortuples_codegen.rs
tests/ui/: attrs_preserve.rs.expected  attrs_preserve.rs.output  auto_impl_member_type.rs.output  auto_impl_no_args.rs.output  auto_impl_only_self.rs.expected  auto_impl_simple.rs.expected
tests/ui/errors/: attr.tuples.debug-expand.empty-arg.rs  attr.tuples.debug-expand.empty-arg.stderr  attr.tuples.debug-expand.invalid-arg.rs  attr.tuples.debug-expand.invalid-arg.stderr  attr.tuples.debug-expand.invalid-path.rs  attr.tuples.debug-expand.invalid-path.stderr  attr.tuples.debug-expand.not-existent-path.rs  attr.tuples.debug-expand.not-existent-path.stderr  attr.tuples.refs-tuple.invalid-arg.rs  attr.tuples.refs-tuple.invalid-arg.stderr  attr.tuples.unique.debug-expand.rs  attr.tuples.unique.debug-expand.stderr  attr.tuples.unique.max-size.rs  attr.tuples.unique.max-size.stderr  attr.tuples.unique.member-name.rs  attr.tuples.unique.member-name.stderr  attr.tuples.unique.member-type.rs  attr.tuples.unique.min-size.rs  (+52 more)
