[package]
name = "fortuples"
version = "0.1.1"
authors = ["Daniel Shiposha"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mrshiposha/fortuples"
description = "Macros to generalize inherent and trait implementation over tuples"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.102", features=["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"
