[package]
name = "fortuples"
version = "0.1.2"
authors = ["Daniel Shiposha"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mrshiposha/fortuples"
description = "Macros to generalize inherent and trait implementation over tuples"
keywords = ["impl", "for", "tuples", "metaprogramming", "trait"]

[lib]
proc-macro = true

[features]
debug = []

[dependencies]
syn = { version = "1.0.102", features=["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"

[dev-dependencies]
trybuild = "1.0.71"
