[package]
name = "fortuples"
version = "0.9.0"
authors = ["Daniel Shiposha"]
edition = "2021"
license = "MIT"
repository = "https://github.com/mrshiposha/fortuples"
description = "Procedural macros to generalize inherent and trait implementations over tuples"
keywords = ["impl", "for", "tuples", "metaprogramming", "trait"]

[package.metadata.docs.rs]
features = ["debug"]

[lib]
proc-macro = true

[features]
debug = []

[dependencies]
syn = { version = "1.0.102", features=["full"] }
quote = "1.0.21"
proc-macro2 = "1.0.46"

[dev-dependencies]
trybuild = "1.0.71"
impl-trait-for-tuples = "0.2.2"
